--- a/indexlogged.html
+++ b/indexlogged.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>SoftUni Blog</title>
+    <title>Moderator(Radoslav Popov)</title>
     <link type="text/css" rel="stylesheet" href="Styles/style.css">
     <script src="Scripts/jquery-1.10.2.js"></script>
     <script src="Scripts/bootstrap.js"></script>
