--- a/indexlogged.html
+++ b/indexlogged.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Moderator(Radoslav Popov)</title>
+    <title>Home Page</title>
     <link type="text/css" rel="stylesheet" href="Styles/style.css">
     <script src="Scripts/jquery-1.10.2.js"></script>
     <script src="Scripts/bootstrap.js"></script>
@@ -11,7 +11,7 @@
     <div class="navbar navbar-default navbar-fixed-top navbar-uppercase">
         <div class="container">
             <div class="navbar-header">
-                <a href="index.html" class="navbar-brand">SoftUni Blog</a>
+                <a href="index.html" class="navbar-brand">Moderator: R.Popov</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
