--- a/createnewpost.html
+++ b/createnewpost.html
@@ -12,7 +12,7 @@
     <div class="navbar navbar-default navbar-fixed-top navbar-uppercase">
         <div class="container">
             <div class="navbar-header">
-                <a href="index.html" class="navbar-brand">Blog</a>
+                <a href="index.html" class="navbar-brand">R.Popov blog</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
