--- a/indexlogged.html
+++ b/indexlogged.html
@@ -11,7 +11,7 @@
     <div class="navbar navbar-default navbar-fixed-top navbar-uppercase">
         <div class="container">
             <div class="navbar-header">
-                <a href="index.html" class="navbar-brand">Moderator: R.Popov</a>
+                <a href="index.html" class="navbar-brand">R.Popov-blog</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
