--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
             &copy; 2016 - Software University Foundation
         </p>
     </div>
+        <div class="navbar navbar-default navbar-fixed-bottom">
+            <div class="container">
+                <div class="navbar-default col-sm-10">
+                    <a class="navbar-brand" href="radoslavInfo.html">Moderator: Radoslav Milenov Popov</a>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
