--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="RegisterPage.html">Register</a> </li>
                         <li><a href="Login%20Page.html">Login</a> </li>
+                        <li><a href="createnewpost.html">Post</a> </li>
                     </ul>
                 </div>
             </div>
